# ft_printf

./: .gitignore  CMakeLists.txt  Makefile  c3pm.json
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_ldpow.c  ft_longdigit.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstdelone_in.c  ft_lstfree_in.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstnew_ncp.c  ft_max_int.c  ft_max_size_t.c  ft_max_uint.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_min_int.c  ft_min_size_t.c  ft_min_uint.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_base.c  (+38 more)
libftprintf/: ft_fprintf.c  ft_printf.c  ft_printf.h  ft_putnchar.c  ft_sprintf.c  ft_va_printf.c  ft_va_printf_ordered.c  ftprt_buffered_putchar_str.h  ftprt_fgetexpon.c  ftprt_getupdecimal.c  ftprt_handle_nans.c  ftprt_highest_byte.c  ftprt_number_len.c  ftprt_ordered_check.c  ftprt_put_a.c  ftprt_put_b.c  ftprt_put_bb.c  ftprt_put_c.c  ftprt_put_cc.c  ftprt_put_d.c  ftprt_put_dblpercent.c  ftprt_put_dd.c  ftprt_put_e.c  ftprt_put_f.c  ftprt_put_float_base.c  ftprt_put_g.c  ftprt_put_k.c  ftprt_put_kk.c  ftprt_put_n.c  ftprt_put_number.c  ftprt_put_o.c  ftprt_put_onumber.c  ftprt_put_oo.c  ftprt_put_p.c  ftprt_put_r.c  ftprt_put_s.c  ftprt_put_sign.c  ftprt_put_ss.c  ftprt_put_u.c  ftprt_put_unumber.c  (+20 more)
libftprintf/binary/: ftprt_put_b.c  ftprt_put_bb.c  ftprt_put_r.c
libftprintf/character/: ftprt_put_c.c  ftprt_put_c_byval.c  ftprt_put_cc.c  ftprt_put_dblpercent.c  ftprt_put_s.c  ftprt_put_s_byval.c  ftprt_put_ss.c  ftprt_putchar.c  ftprt_putnchar.c  ftprt_putwchar.c
libftprintf/date/: ftprt_put_k.c  ftprt_put_kk.c  time_t.c  time_t.h
libftprintf/flag_analysis/: ftprt_set_fflags.c  ftprt_set_flags.c  ftprt_set_flags_ordered.c  ftprt_set_flen_flag.c  ftprt_set_fprecision.c  ftprt_set_fwidth.c  ftprt_set_type.c
libftprintf/flags_analysis/: ftprt_set_fflags.c  ftprt_set_flags_ordered.c  ftprt_set_flen_flag.c  ftprt_set_fprecision.c  ftprt_set_fwidth.c  ftprt_set_type.c
libftprintf/float/: ftprt_agetexpon.c  ftprt_fgetexpon.c  ftprt_handle_nans.c  ftprt_put_a.c  ftprt_put_e.c  ftprt_put_f.c  ftprt_put_float_base.c  ftprt_put_g.c  ftprt_put_sign.c  ftprt_set_fsign.c  ftprt_va_get_fvalue.c
libftprintf/integer/: ftprt_highest_byte.c  ftprt_nlen.c  ftprt_number_len.c  ftprt_put_d.c  ftprt_put_dd.c  ftprt_put_number.c  ftprt_put_o.c  ftprt_put_onumber.c  ftprt_put_oo.c  ftprt_put_p.c  ftprt_put_u.c  ftprt_put_unumber.c  ftprt_put_uu.c  ftprt_put_x.c  ftprt_put_xnumber.c  ftprt_ublen.c  ftprt_ulen.c  ftprt_unumber_baselen.c  ftprt_unumber_len.c  ftprt_va_get_uvalue.c
libftprintf/output_modules/: ftprt_buffered_putchar.c  ftprt_buffered_putchar.h  ftprt_buffered_putchar_fd.c  ftprt_buffered_putchar_fd.h  ftprt_buffered_putchar_str.c  ftprt_buffered_putchar_str.h
libftprintf/utils/: ftprt_getupdecimal.c  ftprt_put_unumber_smpl.c  ftprt_putnchar.c  ftprt_putstr.c
src/exports/: Makefile  ft_printf.h
src/exports/src/: ft_fprintf.c  ft_printf.c  ft_sprintf.c  ft_va_printf.c  ft_va_printf_ordered.c  ftprt_ordered_check.c  ftprt_put_n.c
src/exports/src/binary/: ftprt_put_b.c  ftprt_put_bb.c  ftprt_put_r.c
src/exports/src/character/: ftprt_put_c.c  ftprt_put_c_byval.c  ftprt_put_cc.c  ftprt_put_dblpercent.c  ftprt_put_s.c  ftprt_put_s_byval.c  (+2 more)
src/testmain/: testmain.c
testmain/: testmain.c
(+43 files in other folders)
