cmake_minimum_required(VERSION 3.9)
project(ft_printf_clion)

set(CMAKE_CXX_STANDARD 11)

set(CMAKE_C_COMPILER gcc)

add_executable(ft_printf_clion
        libft/ft_atoi.c
        libft/ft_bzero.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_itoa.c
        libft/ft_longdigit.c
        libft/ft_lstadd.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstdelone_in.c
        libft/ft_lstfree_in.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_lstnew_ncp.c
        libft/ft_max_int.c
        libft/ft_max_size_t.c
        libft/ft_max_uint.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_min_int.c
        libft/ft_min_size_t.c
        libft/ft_min_uint.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_base.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_sf_bin_put_longlong.c
        libft/ft_sqrt.c
        libft/ft_sqrt_up.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdlen.c
        libft/ft_strdnlen.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strndup.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/libft.h

        testmain/testmain.c
        libftprintf/ft_printf.h
        libftprintf/ft_printf.c
        libftprintf/ftprt_set_flags.c
        libftprintf/ftprt_highest_byte.c
        libftprintf/ftprt_putwchar.c
        libftprintf/ftprt_set_type.c
        libftprintf/ft_va_printf.c
        libftprintf/ftprt_put_dblpercent.c
        libftprintf/ftprt_put_s.c
        libftprintf/ftprt_putnchar.c
        libftprintf/ftprt_putchar.c
        libftprintf/ftprt_put_ss.c
        libftprintf/ftprt_number_len.c
        libftprintf/ftprt_put_number.c
        libftprintf/ftprt_put_d.c
        libftprintf/ftprt_put_dd.c
        libftprintf/ftprt_put_u.c
        libftprintf/ftprt_va_get_uvalue.c
        libftprintf/ftprt_put_unumber.c
        libftprintf/ftprt_unumber_len.c
        libftprintf/ftprt_put_uu.c
        libftprintf/ftprt_unumber_baselen.c
        libftprintf/ftprt_put_x.c
        libftprintf/ftprt_getupdecimal.c
        libftprintf/ftprt_put_xnumber.c
        libftprintf/ftprt_put_p.c
        libftprintf/ftprt_put_o.c
        libftprintf/ftprt_put_onumber.c libftprintf/ftprt_put_oo.c libftprintf/ftprt_put_c.c libftprintf/ftprt_put_cc.c)
